--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,22 +1,52 @@
-@font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459WlhyyTh89Y.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@import "./vars";
 
-@font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459WlhyyTh89Y.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+* {
+    box-sizing: border-box;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: $body-font;
+    font-size: 15px;
     font-weight: 700;
+    margin: 0;
+    padding: 0;
+}
+
+.pricing {
+    background-color: $gray-blue-v-light;
+    padding: 4.25rem 1.25rem;
+    position: relative;
+    text-align: center;
+    
+    &::before {
+        background: url('../images/bg-top.svg') center no-repeat;
+        background-size: contain;
+        content: '';
+        display: inline-block;
+        position: absolute;
+        height: 620px;
+        right: -10rem;
+        top: -2.5rem;
+        width: 100%;
+    }
+
+    &__title {
+        color: $gray-blue-dark;
+        font-size: 2rem;
+        margin: 0;
+        position: relative;
+        z-index: 2;
+    }
+
+    &-toggle {
+        padding: 2.5rem 0 5rem;
+        position: relative;
+        z-index: 2;
+
+        &__label {
+            color: $gray-blue-light;
+            display: inline-block;
+            margin: 0;
+        }
+    }
 }
